add episode 1's title and commented placeholders for the rest of the season

--- a/index.html
+++ b/index.html
@@ -84,8 +84,42 @@
 					<div class="social-update">
 						<hr class="intro-divider">
 						<h2 class="section-heading">
-							<span class="blurry"><span>[</span>Episode 1<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+							<span class="blurry"><span>[</span>Episode 1<span class="blurry"><span class="sub">:</span></span></span><span class="super"><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i></span><span class="sub blurry">Pamodzi</span>]
 						</h2>
+						<!--
+						<hr class="intro-divider">
+						<h2 class="section-heading">
+							<span class="blurry"><span>[</span>Episode 2<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+						</h2>
+						<hr class="intro-divider">
+						<h2 class="section-heading">
+							<span class="blurry"><span>[</span>Episode 3<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+						</h2>
+						<hr class="intro-divider">
+						<h2 class="section-heading">
+							<span class="blurry"><span>[</span>Episode 4<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+						</h2>
+						<hr class="intro-divider">
+						<h2 class="section-heading">
+							<span class="blurry"><span>[</span>Episode 5<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+						</h2>
+						<hr class="intro-divider">
+						<h2 class="section-heading">
+							<span class="blurry"><span>[</span>Episode 6<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+						</h2>
+						<hr class="intro-divider">
+						<h2 class="section-heading">
+							<span class="blurry"><span>[</span>Episode 7<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+						</h2>
+						<hr class="intro-divider">
+						<h2 class="section-heading">
+							<span class="blurry"><span>[</span>Episode 8<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+						</h2>
+						<h2 class="section-heading">
+							<span class="blurry"><span>[</span>Finale<span class="blurry"><span class="sub">:</span></span></span><i class="fa fa-list-ol"></i><i class="fa fa-cut"></i><span class="sub blurry">]</span>
+						</h2>
+						-->
+						<hr class="intro-divider">
           	<ul class="list-inline icon-button-array">
             	<li>
 								<a class="icon-button twitter" target="_blank" href="https://twitter.com/intent/user?screen_name=twishibane">
